--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- my style -->
-    <link rel="stylesheet" href="css/style.css" </head>
+    <link rel="stylesheet" href="style.css" </head>
 
 <body>
 
@@ -60,7 +60,7 @@
 
         <div class="row">
             <div class="about-img">
-                <img src="img/Tentang kami.jpg" alt="Tentang kami">
+                <img src="Tentang kami.jpg" alt="Tentang kami">
             </div>
             <div class="content">
                 <h3> Kenapa kita harus berkarya?</h3>
@@ -93,7 +93,7 @@
     </script>
 
     <!-- my java scrip -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
